project.mak contains most boilerplate stuff; Makelines stripped to bare minimum

--- a/01-intro/Makefile
+++ b/01-intro/Makefile
@@ -1,30 +1,14 @@
 QUIET?=@
 
--include ../project.mak
-
+# project.mak relies on TARGETNAMES, so this must be defined before we include project.mak
 TARGETNAMES = \
 	daytimetcpcli \
 	daytimetcpsrv
 
-TARGETS := $(addprefix $(BLDDIR)/, $(TARGETNAMES))
-
-all: $(TARGETS)
+-include ../project.mak
 
 $(BLDDIR)/daytimetcpsrv: daytimetcpsrv.o $(LIBSOCK) 
 	$(CC) -o $@ $^
 
 $(BLDDIR)/daytimetcpcli: daytimetcpcli.o $(LIBSOCK)
 	$(CC) -o $@ $^
-
-# This include contains targets, so include after the default target
--include ../lib.mak
-
-.PHONY: clean
-
-clean:
-	$(QUIET)rm -f $(TARGETS)
-	$(QUIET)rm -f *.o *.d *.tmp
-
-distclean: clean
-	$(QUIET)rm -f $(LIBS)
-	$(QUIET)rm -f $(LIBOBJ)
