capture/udpcksum functional

--- a/29-capture/Makefile
+++ b/29-capture/Makefile
@@ -1,9 +1,11 @@
 QUIET?=@
 
+LFLAGS=-lpcap
+
 TARGETNAMES = \
 	udpcksum \
 
 -include ../project.mak
 
-$(BLDDIR)/udpcksum: udpcksum.o pcap.o send_dns_query.o udpwrite.o udpread.o sig_alrm.o cleanup.o $(LIBSOCK) 
-	$(CC) -o $@ $^
+$(BLDDIR)/udpcksum: udpcksum.o pcap.o test_udp.o send_dns_query.o udpwrite.o udpread.o cleanup.o $(LIBSOCK) 
+	$(CC) -o $@ $^ $(LFLAGS)
