Added ARP & gateway MAC discovery

--- a/17-ioctl/Makefile
+++ b/17-ioctl/Makefile
@@ -2,10 +2,13 @@ QUIET?=@
 
 TARGETNAMES = \
 	prifinfo \
+	prmac 
 
 -include ../project.mak
 
 $(BLDDIR)/prifinfo: prifinfo.o $(LIBSOCK)
 	$(CC) -o $@ $^
 
+$(BLDDIR)/prmac: prmac.o $(LIBSOCK)
+	$(CC) -o $@ $^
 
